--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Data/S05_MI/motorimagination_subject5_run7.gdf
 Data/S05_MI/motorimagination_subject5_run8.gdf
 Data/S05_MI/motorimagination_subject5_run9.gdf
 Data/S05_MI/motorimagination_subject5_run10.gdf
+dataCSV/S01_MI/event_info_S01_run1.csv
