--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,253 @@ Data/S05_MI/motorimagination_subject5_run8.gdf
 Data/S05_MI/motorimagination_subject5_run9.gdf
 Data/S05_MI/motorimagination_subject5_run10.gdf
 dataCSV/S01_MI/event_info_S01_run1.csv
+Data/S01_ME/motorexecution_subject1_run1.gdf
+Data/S01_ME/motorexecution_subject1_run2.gdf
+Data/S01_ME/motorexecution_subject1_run3.gdf
+Data/S01_ME/motorexecution_subject1_run4.gdf
+Data/S01_ME/motorexecution_subject1_run5.gdf
+Data/S01_ME/motorexecution_subject1_run6.gdf
+Data/S01_ME/motorexecution_subject1_run7.gdf
+Data/S01_ME/motorexecution_subject1_run8.gdf
+Data/S01_ME/motorexecution_subject1_run9.gdf
+Data/S01_ME/motorexecution_subject1_run10.gdf
+Data/S02_ME/motorexecution_subject2_run1.gdf
+Data/S02_ME/motorexecution_subject2_run2.gdf
+Data/S02_ME/motorexecution_subject2_run3.gdf
+Data/S02_ME/motorexecution_subject2_run4.gdf
+Data/S02_ME/motorexecution_subject2_run5.gdf
+Data/S02_ME/motorexecution_subject2_run6.gdf
+Data/S02_ME/motorexecution_subject2_run7.gdf
+Data/S02_ME/motorexecution_subject2_run8.gdf
+Data/S02_ME/motorexecution_subject2_run9.gdf
+Data/S02_ME/motorexecution_subject2_run10.gdf
+Data/S03_ME/motorexecution_subject3_run1.gdf
+Data/S03_ME/motorexecution_subject3_run2.gdf
+Data/S03_ME/motorexecution_subject3_run3.gdf
+Data/S03_ME/motorexecution_subject3_run4.gdf
+Data/S03_ME/motorexecution_subject3_run5.gdf
+Data/S03_ME/motorexecution_subject3_run6.gdf
+Data/S03_ME/motorexecution_subject3_run7.gdf
+Data/S03_ME/motorexecution_subject3_run8.gdf
+Data/S03_ME/motorexecution_subject3_run9.gdf
+Data/S03_ME/motorexecution_subject3_run10.gdf
+Data/S04_ME/motorexecution_subject4_run1.gdf
+Data/S04_ME/motorexecution_subject4_run2.gdf
+Data/S04_ME/motorexecution_subject4_run3.gdf
+Data/S04_ME/motorexecution_subject4_run4.gdf
+Data/S04_ME/motorexecution_subject4_run5.gdf
+Data/S04_ME/motorexecution_subject4_run6.gdf
+Data/S04_ME/motorexecution_subject4_run7.gdf
+Data/S04_ME/motorexecution_subject4_run8.gdf
+Data/S04_ME/motorexecution_subject4_run9.gdf
+Data/S04_ME/motorexecution_subject4_run10.gdf
+Data/S05_ME/motorexecution_subject5_run1.gdf
+Data/S05_ME/motorexecution_subject5_run2.gdf
+Data/S05_ME/motorexecution_subject5_run3.gdf
+Data/S05_ME/motorexecution_subject5_run4.gdf
+Data/S05_ME/motorexecution_subject5_run5.gdf
+Data/S05_ME/motorexecution_subject5_run6.gdf
+Data/S05_ME/motorexecution_subject5_run7.gdf
+Data/S05_ME/motorexecution_subject5_run8.gdf
+Data/S05_ME/motorexecution_subject5_run9.gdf
+Data/S05_ME/motorexecution_subject5_run10.gdf
+Data/S06_ME/motorexecution_subject6_run1.gdf
+Data/S06_ME/motorexecution_subject6_run2.gdf
+Data/S06_ME/motorexecution_subject6_run3.gdf
+Data/S06_ME/motorexecution_subject6_run4.gdf
+Data/S06_ME/motorexecution_subject6_run5.gdf
+Data/S06_ME/motorexecution_subject6_run6.gdf
+Data/S06_ME/motorexecution_subject6_run7.gdf
+Data/S06_ME/motorexecution_subject6_run8.gdf
+Data/S06_ME/motorexecution_subject6_run9.gdf
+Data/S06_ME/motorexecution_subject6_run10.gdf
+Data/S06_MI/motorimagination_subject6_run1.gdf
+Data/S06_MI/motorimagination_subject6_run2.gdf
+Data/S06_MI/motorimagination_subject6_run3.gdf
+Data/S06_MI/motorimagination_subject6_run4.gdf
+Data/S06_MI/motorimagination_subject6_run5.gdf
+Data/S06_MI/motorimagination_subject6_run6.gdf
+Data/S06_MI/motorimagination_subject6_run7.gdf
+Data/S06_MI/motorimagination_subject6_run8.gdf
+Data/S06_MI/motorimagination_subject6_run9.gdf
+Data/S06_MI/motorimagination_subject6_run10.gdf
+Data/S07_ME/motorexecution_subject7_run1.gdf
+Data/S07_ME/motorexecution_subject7_run2.gdf
+Data/S07_ME/motorexecution_subject7_run3.gdf
+Data/S07_ME/motorexecution_subject7_run4.gdf
+Data/S07_ME/motorexecution_subject7_run5.gdf
+Data/S07_ME/motorexecution_subject7_run6.gdf
+Data/S07_ME/motorexecution_subject7_run7.gdf
+Data/S07_ME/motorexecution_subject7_run8.gdf
+Data/S07_ME/motorexecution_subject7_run9.gdf
+Data/S07_ME/motorexecution_subject7_run10.gdf
+Data/S07_MI/motorimagination_subject7_run1.gdf
+Data/S07_MI/motorimagination_subject7_run2.gdf
+Data/S07_MI/motorimagination_subject7_run3.gdf
+Data/S07_MI/motorimagination_subject7_run4.gdf
+Data/S07_MI/motorimagination_subject7_run5.gdf
+Data/S07_MI/motorimagination_subject7_run6.gdf
+Data/S07_MI/motorimagination_subject7_run7.gdf
+Data/S07_MI/motorimagination_subject7_run8.gdf
+Data/S07_MI/motorimagination_subject7_run9.gdf
+Data/S07_MI/motorimagination_subject7_run10.gdf
+Data/S08_ME/motorexecution_subject8_run1.gdf
+Data/S08_ME/motorexecution_subject8_run2.gdf
+Data/S08_ME/motorexecution_subject8_run3.gdf
+Data/S08_ME/motorexecution_subject8_run4.gdf
+Data/S08_ME/motorexecution_subject8_run5.gdf
+Data/S08_ME/motorexecution_subject8_run6.gdf
+Data/S08_ME/motorexecution_subject8_run7.gdf
+Data/S08_ME/motorexecution_subject8_run8.gdf
+Data/S08_ME/motorexecution_subject8_run9.gdf
+Data/S08_ME/motorexecution_subject8_run10.gdf
+Data/S08_MI/motorimagination_subject8_run1.gdf
+Data/S08_MI/motorimagination_subject8_run2.gdf
+Data/S08_MI/motorimagination_subject8_run3.gdf
+Data/S08_MI/motorimagination_subject8_run4.gdf
+Data/S08_MI/motorimagination_subject8_run5.gdf
+Data/S08_MI/motorimagination_subject8_run6.gdf
+Data/S08_MI/motorimagination_subject8_run7.gdf
+Data/S08_MI/motorimagination_subject8_run8.gdf
+Data/S08_MI/motorimagination_subject8_run9.gdf
+Data/S08_MI/motorimagination_subject8_run10.gdf
+Data/S09_ME/motorexecution_subject9_run1.gdf
+Data/S09_ME/motorexecution_subject9_run2.gdf
+Data/S09_ME/motorexecution_subject9_run3.gdf
+Data/S09_ME/motorexecution_subject9_run4.gdf
+Data/S09_ME/motorexecution_subject9_run5.gdf
+Data/S09_ME/motorexecution_subject9_run6.gdf
+Data/S09_ME/motorexecution_subject9_run7.gdf
+Data/S09_ME/motorexecution_subject9_run8.gdf
+Data/S09_ME/motorexecution_subject9_run9.gdf
+Data/S09_ME/motorexecution_subject9_run10.gdf
+Data/S09_MI/motorimagination_subject9_run1.gdf
+Data/S09_MI/motorimagination_subject9_run2.gdf
+Data/S09_MI/motorimagination_subject9_run3.gdf
+Data/S09_MI/motorimagination_subject9_run4.gdf
+Data/S09_MI/motorimagination_subject9_run5.gdf
+Data/S09_MI/motorimagination_subject9_run6.gdf
+Data/S09_MI/motorimagination_subject9_run7.gdf
+Data/S09_MI/motorimagination_subject9_run8.gdf
+Data/S09_MI/motorimagination_subject9_run9.gdf
+Data/S09_MI/motorimagination_subject9_run10.gdf
+Data/S10_ME/motorexecution_subject10_run1.gdf
+Data/S10_ME/motorexecution_subject10_run2.gdf
+Data/S10_ME/motorexecution_subject10_run3.gdf
+Data/S10_ME/motorexecution_subject10_run4.gdf
+Data/S10_ME/motorexecution_subject10_run5.gdf
+Data/S10_ME/motorexecution_subject10_run6.gdf
+Data/S10_ME/motorexecution_subject10_run7.gdf
+Data/S10_ME/motorexecution_subject10_run8.gdf
+Data/S10_ME/motorexecution_subject10_run9.gdf
+Data/S10_ME/motorexecution_subject10_run10.gdf
+Data/S10_MI/motorimagination_subject10_run1.gdf
+Data/S10_MI/motorimagination_subject10_run2.gdf
+Data/S10_MI/motorimagination_subject10_run3.gdf
+Data/S10_MI/motorimagination_subject10_run4.gdf
+Data/S10_MI/motorimagination_subject10_run5.gdf
+Data/S10_MI/motorimagination_subject10_run6.gdf
+Data/S10_MI/motorimagination_subject10_run7.gdf
+Data/S10_MI/motorimagination_subject10_run8.gdf
+Data/S10_MI/motorimagination_subject10_run9.gdf
+Data/S10_MI/motorimagination_subject10_run10.gdf
+Data/S11_ME/motorexecution_subject11_run1.gdf
+Data/S11_ME/motorexecution_subject11_run2.gdf
+Data/S11_ME/motorexecution_subject11_run3.gdf
+Data/S11_ME/motorexecution_subject11_run4.gdf
+Data/S11_ME/motorexecution_subject11_run5.gdf
+Data/S11_ME/motorexecution_subject11_run6.gdf
+Data/S11_ME/motorexecution_subject11_run7.gdf
+Data/S11_ME/motorexecution_subject11_run8.gdf
+Data/S11_ME/motorexecution_subject11_run9.gdf
+Data/S11_ME/motorexecution_subject11_run10.gdf
+Data/S11_MI/motorimagination_subject11_run1.gdf
+Data/S11_MI/motorimagination_subject11_run2.gdf
+Data/S11_MI/motorimagination_subject11_run3.gdf
+Data/S11_MI/motorimagination_subject11_run4.gdf
+Data/S11_MI/motorimagination_subject11_run5.gdf
+Data/S11_MI/motorimagination_subject11_run6.gdf
+Data/S11_MI/motorimagination_subject11_run7.gdf
+Data/S11_MI/motorimagination_subject11_run8.gdf
+Data/S11_MI/motorimagination_subject11_run9.gdf
+Data/S11_MI/motorimagination_subject11_run10.gdf
+Data/S12_ME/motorexecution_subject12_run1.gdf
+Data/S12_ME/motorexecution_subject12_run2.gdf
+Data/S12_ME/motorexecution_subject12_run3.gdf
+Data/S12_ME/motorexecution_subject12_run4.gdf
+Data/S12_ME/motorexecution_subject12_run5.gdf
+Data/S12_ME/motorexecution_subject12_run6.gdf
+Data/S12_ME/motorexecution_subject12_run7.gdf
+Data/S12_ME/motorexecution_subject12_run8.gdf
+Data/S12_ME/motorexecution_subject12_run9.gdf
+Data/S12_ME/motorexecution_subject12_run10.gdf
+Data/S12_MI/motorimagination_subject12_run1.gdf
+Data/S12_MI/motorimagination_subject12_run2.gdf
+Data/S12_MI/motorimagination_subject12_run3.gdf
+Data/S12_MI/motorimagination_subject12_run4.gdf
+Data/S12_MI/motorimagination_subject12_run5.gdf
+Data/S12_MI/motorimagination_subject12_run6.gdf
+Data/S12_MI/motorimagination_subject12_run7.gdf
+Data/S12_MI/motorimagination_subject12_run8.gdf
+Data/S12_MI/motorimagination_subject12_run9.gdf
+Data/S12_MI/motorimagination_subject12_run10.gdf
+Data/S13_ME/motorexecution_subject13_run1.gdf
+Data/S13_ME/motorexecution_subject13_run2.gdf
+Data/S13_ME/motorexecution_subject13_run3.gdf
+Data/S13_ME/motorexecution_subject13_run4.gdf
+Data/S13_ME/motorexecution_subject13_run5.gdf
+Data/S13_ME/motorexecution_subject13_run6.gdf
+Data/S13_ME/motorexecution_subject13_run7.gdf
+Data/S13_ME/motorexecution_subject13_run8.gdf
+Data/S13_ME/motorexecution_subject13_run9.gdf
+Data/S13_ME/motorexecution_subject13_run10.gdf
+Data/S13_MI/motorimagination_subject13_run1.gdf
+Data/S13_MI/motorimagination_subject13_run2.gdf
+Data/S13_MI/motorimagination_subject13_run3.gdf
+Data/S13_MI/motorimagination_subject13_run4.gdf
+Data/S13_MI/motorimagination_subject13_run5.gdf
+Data/S13_MI/motorimagination_subject13_run6.gdf
+Data/S13_MI/motorimagination_subject13_run7.gdf
+Data/S13_MI/motorimagination_subject13_run8.gdf
+Data/S13_MI/motorimagination_subject13_run9.gdf
+Data/S13_MI/motorimagination_subject13_run10.gdf
+Data/S14_ME/motorexecution_subject14_run1.gdf
+Data/S14_ME/motorexecution_subject14_run2.gdf
+Data/S14_ME/motorexecution_subject14_run3.gdf
+Data/S14_ME/motorexecution_subject14_run4.gdf
+Data/S14_ME/motorexecution_subject14_run5.gdf
+Data/S14_ME/motorexecution_subject14_run6.gdf
+Data/S14_ME/motorexecution_subject14_run7.gdf
+Data/S14_ME/motorexecution_subject14_run8.gdf
+Data/S14_ME/motorexecution_subject14_run9.gdf
+Data/S14_ME/motorexecution_subject14_run10.gdf
+Data/S14_MI/motorimagination_subject14_run1.gdf
+Data/S14_MI/motorimagination_subject14_run2.gdf
+Data/S14_MI/motorimagination_subject14_run3.gdf
+Data/S14_MI/motorimagination_subject14_run4.gdf
+Data/S14_MI/motorimagination_subject14_run5.gdf
+Data/S14_MI/motorimagination_subject14_run6.gdf
+Data/S14_MI/motorimagination_subject14_run7.gdf
+Data/S14_MI/motorimagination_subject14_run8.gdf
+Data/S14_MI/motorimagination_subject14_run9.gdf
+Data/S14_MI/motorimagination_subject14_run10.gdf
+Data/S15_ME/motorexecution_subject15_run1.gdf
+Data/S15_ME/motorexecution_subject15_run2.gdf
+Data/S15_ME/motorexecution_subject15_run3.gdf
+Data/S15_ME/motorexecution_subject15_run4.gdf
+Data/S15_ME/motorexecution_subject15_run5.gdf
+Data/S15_ME/motorexecution_subject15_run6.gdf
+Data/S15_ME/motorexecution_subject15_run7.gdf
+Data/S15_ME/motorexecution_subject15_run8.gdf
+Data/S15_ME/motorexecution_subject15_run9.gdf
+Data/S15_ME/motorexecution_subject15_run10.gdf
+Data/S15_MI/motorimagination_subject15_run1.gdf
+Data/S15_MI/motorimagination_subject15_run2.gdf
+Data/S15_MI/motorimagination_subject15_run3.gdf
+Data/S15_MI/motorimagination_subject15_run4.gdf
+Data/S15_MI/motorimagination_subject15_run5.gdf
+Data/S15_MI/motorimagination_subject15_run6.gdf
+Data/S15_MI/motorimagination_subject15_run7.gdf
+Data/S15_MI/motorimagination_subject15_run8.gdf
+Data/S15_MI/motorimagination_subject15_run9.gdf
+Data/S15_MI/motorimagination_subject15_run10.gdf
